Commit Bootstrap and something Person 15/09 18:22

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,35 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-dark bg-dark">
-  <!-- Navbar content -->
+<div class="container-fluid">
+  <img src="/assets/banner.jpg" class="rounded mx-auto d-block" alt="Responsive image">
+</div>
+  <div class="container-fluid">
+<nav class="navbar navbar-inverse navbar-toggleable-md navbar-light bg-inverse">
+    <a class="navbar-brand" href="#">
+        <img src="/assets/icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        Sense8
+      </a>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link btn-warning" href="/profile">My Histories<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn-warning" href="#">My Stuffs</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn-warning" href="#">My Partner</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn-warning" href="#">Events</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
 </nav>
+</div>
+<div class="container-fluid">
+<app-profile-index></app-profile-index>
+</div>
