--- a/src/app/profile-index/profile-index.component.html
+++ b/src/app/profile-index/profile-index.component.html
@@ -1,3 +1,9 @@
-<p>
-  profile-index works!
-</p>
+<div>
+    <section class="section">
+        <article class="col-xs-3">
+          <h2>{{person.id}}</h2>
+          <h2>{{person.first_name}}</h2>
+          <img src="{{person.picture}}" alt="..." class="rounded-circle">
+          </article>
+      </section>
+</div>
