--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,6 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.css";
 
-*{
+body{
     background-color: #263D3D
 }
