--- a/src/app/profile-index/profile-index.component.html
+++ b/src/app/profile-index/profile-index.component.html
@@ -1,9 +1,28 @@
-<div>
-    <section class="section">
-        <article class="col-xs-3">
-          <h2>{{person.id}}</h2>
-          <h2>{{person.first_name}}</h2>
-          <img src="{{person.picture}}" alt="..." class="rounded-circle">
-          </article>
-      </section>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-block">
+                    <section class="section">
+                        <article class="col-xs-3">
+                            <img src="{{person.picture}}" class="rounded-circle">
+                            <h2>{{person.first_name}} {{person.last_name}}</h2>
+                            <h6>{{person.city}}</h6>
+                            <h4>{{person.country}}</h4>
+                        </article>
+                    </section>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-block">
+                    <h2>{{person.first_name}} {{person.last_name}}</h2>
+                    <h6>{{person.city}}</h6>
+                    <h4>{{person.country}}</h4>
+                    <input
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
